@@ -11,6 +11,7 @@ ver. 0.?.? (2007/??/??) - ???
 ----------
 - Close opened handlers. Thanks to Yaroslav Halchenko
 - Fixed "reload" bug. Many many thanks to Yaroslav Halchenko
+- Added date format for asctime without year
 
 ver. 0.7.8 (2007/03/21) - release candidate
 ----------
